[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/scoreBoard.gd" type="Script" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/panel.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 5 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 10.0
content_margin_bottom = 10.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 512, 512 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="scoreBoard" type="Node2D"]
script = ExtResource( 1 )

[node name="top" type="StaticBody2D" parent="."]
position = Vector2( 160, -200 )
collision_layer = 128
collision_mask = 128

[node name="shape" type="CollisionShape2D" parent="top"]
shape = SubResource( 1 )

[node name="msg" type="RigidBody2D" parent="."]
position = Vector2( 160, -32 )
collision_layer = 128
collision_mask = 128
mode = 2
mass = 5.10204
gravity_scale = 5.0
linear_velocity = Vector2( 0, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="msg"]
position = Vector2( 1.12247, 0 )
shape = SubResource( 2 )

[node name="panel" type="PanelContainer" parent="msg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -87.0
margin_top = -131.0
margin_right = 87.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="msg/panel"]
margin_left = 20.0
margin_top = 10.0
margin_right = 154.0
margin_bottom = 121.0

[node name="lable" type="VBoxContainer" parent="msg/panel/hbox"]
margin_right = 119.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_round" type="Label" parent="msg/panel/hbox/lable"]
margin_right = 119.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.388235, 0.501961, 1 )
text = "Best round"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="last_round" type="Label" parent="msg/panel/hbox/lable"]
margin_top = 23.0
margin_right = 119.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.388235, 0.501961, 1 )
text = "Last round"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="rounds_played" type="Label" parent="msg/panel/hbox/lable"]
margin_top = 46.0
margin_right = 119.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.388235, 0.501961, 1 )
text = "Rounds played"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="avg_per_round" type="Label" parent="msg/panel/hbox/lable"]
margin_top = 69.0
margin_right = 119.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.388235, 0.501961, 1 )
text = "Avg per round"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="colors_earned" type="Label" parent="msg/panel/hbox/lable"]
margin_top = 92.0
margin_right = 119.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.372549, 0.388235, 0.501961, 1 )
text = "Colors earned"
align = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="score" type="VBoxContainer" parent="msg/panel/hbox"]
margin_left = 123.0
margin_right = 134.0
margin_bottom = 111.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="best_round2" type="Label" parent="msg/panel/hbox/score"]
margin_right = 11.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.262745, 0.321569, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_round2" type="Label" parent="msg/panel/hbox/score"]
margin_top = 23.0
margin_right = 11.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.262745, 0.321569, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rounds_played2" type="Label" parent="msg/panel/hbox/score"]
margin_top = 46.0
margin_right = 11.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.262745, 0.321569, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="avg_per_round2" type="Label" parent="msg/panel/hbox/score"]
margin_top = 69.0
margin_right = 11.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.262745, 0.321569, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colors_earned2" type="Label" parent="msg/panel/hbox/score"]
margin_top = 92.0
margin_right = 11.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.262745, 0.321569, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DampedSpringJoint2D" type="DampedSpringJoint2D" parent="."]
position = Vector2( 60, -180 )
node_a = NodePath("../top")
node_b = NodePath("../msg")
length = 10.0
stiffness = 10.0
